# Valkyrix

./: .env.example  .gitignore  PUBLIC_DEMO_SCOPE.md  README.md  VOICEOVER_SCRIPT_BILINGUAL.md  index.html  package-lock.json  package.json  tsconfig.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  GDD-VALKYRIX.md  PITFALLS.md  STACK.md  SUMMARY.md
anchor/: Anchor.toml  Cargo.toml  README.md
anchor/programs/valkyrix_ledger/: Cargo.toml
anchor/programs/valkyrix_ledger/src/: lib.rs
docs/: SMART_CONTRACT.md  SMART_CONTRACT_BIBLE.md  SMART_CONTRACT_CURRENT.md
editor/: CameraMath.ts  index.html  main.js  styles.css
editor/vite/: editorAssetsPlugin.mjs
scripts/: deploy-valkyrix-recorder.sh  init-soar-devnet.mjs
src/: game-tick.worker.ts  main.ts  vite-env.d.ts
src/blockchain/: BattleSessionState.ts  BlockchainService.test.ts  BlockchainService.ts  LeaderboardService.test.ts  LeaderboardService.ts  ValkyrixLedgerClient.test.ts  ValkyrixLedgerClient.ts  blockchain.types.ts  blockchainEvents.ts
src/debug/: TEMP_citadelStress.ts
src/game/: BossDialog.ts  BossSystem.test.ts  BossSystem.ts  BuildingSystem.test.ts  BuildingSystem.ts  CombatSystem.test.ts  CombatSystem.ts  GameRenderer.ts  GameState.test.ts  GameState.ts  PathExtractor.test.ts  PathExtractor.ts  ProjectileSystem.test.ts  ProjectileSystem.ts  RecruitmentSystem.test.ts  (+13 more)
vite/: config.dev.mjs  config.prod.mjs
(+104 files in other folders)
