[package]
name = "valkyrix_ledger"
version = "0.1.0"
description = "Anchor ledger program for Valkyrix gameplay events"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "valkyrix_ledger"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
